Fix avatar position on mobile

--- a/app/assets/stylesheets/application/modules/molecules/_billboard.scss
+++ b/app/assets/stylesheets/application/modules/molecules/_billboard.scss
@@ -14,6 +14,10 @@
   box-sizing: border-box;
   padding-top: 20px;
 
+  @media #{$to-medium} {
+    @include flex($direction: column);
+  }
+
   .a-avatar {
     margin-top: 10px;
   }
@@ -29,16 +33,26 @@
 }
 
 .m-billboard__container-left {
-  width: 65%;
+  width: 100%;
+
+  @media #{$from-medium} {
+    width: 65%;
+  }
 }
 
 .m-billboard__container-right {
-  width: 30%;
-  align-self: flex-start;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
 
   .a-avatar {
     width: 180px;
     height: 180px;
+  }
+
+  @media #{$from-medium} {
+    align-self: flex-start;
+    width: 30%;
   }
 }
 
